# miy

./: .gitignore  Cargo.toml  shell.nix
crates/miy/: Cargo.toml
crates/miy-color/: Cargo.toml
crates/miy-color/src/: lib.rs  palette.rs  rgb.rs  srgb.rs
crates/miy-math/: Cargo.toml
crates/miy-math/src/: dimensions.rs  lib.rs  matrix.rs  position.rs
crates/miy-opengl/: Cargo.toml
crates/miy-opengl/src/: bindings.rs  context.rs  lib.rs  types.rs  util.rs
crates/miy/examples/: triangle.rs
crates/miy/src/: lib.rs
