[workspace]
members = [ 
]
resolver = "2"

[workspace.lints.clippy]
# cargo 
cargo_common_metadata = "warn"
negative_feature_names = "deny"
redundant_feature_names = "deny"
wildcard_dependencies = "warn"

# restriction
alloc_instead_of_core = "warn"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "warn"
as_underscore = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"

[workspace.dependencies]
